Thu Nov 26 19:11:46 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtk-boxed.defs (GtkCTreeNode): define GtkCTreeNode as boxed type
	* gtk/gtkctree.c (gtk_ctree_class_init): use GTK_CTREE_NODE_TYPE
	instead of GTK_TYPE_POINTER in signal definitions.
	(patch from James Henstridge <james@daa.com.au>)

Thu Nov 26 18:48:44 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtkclist.c (set_cell_contents)
	* gtk/gtkctree.c (set_cell_contents): call column_auto_resize only
 	if auto.resize == TRUE

	* gtk/gtknotebook.c (gtk_notebook_set_shape) (gtk_notebook_expose):
 	don't draw tab, if show_tabs == FALSE
 	(bug reports from Alexis Mikhailov / Dave Cole)
 	(gtk_notebook_focus_changed) (gtk_notebook_draw_focus): draw only
 	the focus rectangle, not the hole tab.

Thu Nov 26 03:18:08 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkclist.h: 
	* gtk/gtkctree.h: 
	* gtk/gtkclist.c:
	* gtk/gtkctree.c: reverted bogus and undocumented!!! changes from
	Jay Cox (98/11/23 13:53:26) which `const' qualified char* arrays.

	* gtk/maketypes.awk: changed underline substitution, so we get
	GTK_TYPE_CTREE_POS instead of the broken GTK_TYPE_C_TREE_POS.
	* gtk/makeenums.pl: likewise.
	* gtk/gtkctree.c: adapted type names accordingly.

Tue Nov 24 11:31:06 1998  Owen Taylor  <otaylor@redhat.com>

	* docs/Changes-1.2.txt: Edited section on the ScrolledWindow.

	* gtk/gtklayout.c (gtk_layout_set_[hv]adjustment): Remove
	some code duplication.

	* gtk/gtklayout.[ch] Fixed mapping and unmapping of child windows
	and child widgets when scrolling greater than 32k pixels.

	* testgtk.c: Modified layout test to test scrolling over 
	long distances.

Tue Nov 24 11:11:05 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtklayout.[ch]: Fixed up copyright message.

	* gdk/gdkrgb.c (DM): Make the dither matrix constant
	so it can be shared.

	* gtk/gtkdnd.c: Make cursor bitmaps const.

	* gdk/gdk.h gdk/gdkpixmap.c: Added const to 
	gdk_pixmap/bitmap_create_from_data.

Tue Nov 24 07:46:09 1998  Tim Janik  <timj@gtk.org>
